--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,82 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  color: #000000;
+}
+header img{
+  width: 50px;
+  height: 50px;
+ }
+ .logo{
+  display: grid;
+  grid-template-columns: 10% 80%;
+  grid-template-rows: 1fr;
+  grid-column-gap: 35px;
+ }
+
+ header h1{
+  margin-top: 5px;
+ }
+
+.menu{
+  display: none;
+}
+
+ul {
+  list-style: none;
+  display: inline-flex;
+}
+ul li
+{
+  margin-left: 5px;
+}
+
+a {
+  text-decoration: none;  
+}
+.menupartTwo{
+  margin-left: -30px; 
+}
+/*section*/
+section{
+  text-align: center;
+}
+
+/*for tab*/
+@media screen and (min-width: 768px) {
+  .menu {
+    display: inline;
+  }
+  header h1{
+    display: none;
+   }
+/*section*/
+section{
+  text-align: center;
+}
+.mainText{
+  border: 1px solid #000;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 5px;
+  grid-row-gap: 0px;
+}
+
+}
+
+/*for desktop*/
+@media screen and (min-width: 1024px) {
+  .menu {
+    display: inline;
+  }
+  header h1{
+    display: inline;
+   }
+.mainText{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 5px;
+  grid-row-gap: 0px;
+}
+
 }
