--- a/code/style.css
+++ b/code/style.css
@@ -18,19 +18,29 @@ body {
 h1 {
   font-family: 'Playfair Display', serif;
   text-transform: uppercase;
+  letter-spacing: 0.125em;
   font-size: clamp(1.5rem, 2.5vw, 5rem);
   padding-left: 0.3em;
 }
 
-h1 > span,
-h2 > span {
+h1 > span {
   display: block;
 }
 
 h2 {
   font-family: 'Be Vietnam Pro', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 0.15em;
+  margin-bottom: 0.2em;
 }
 
+p {
+  line-height: 1.7em;
+}
+
+.date-item {
+  color: #BCA787;
+}
 
 /* BUTTONS */
 
@@ -38,30 +48,44 @@ button {
   font-family: 'Be Vietnam Pro', sans-serif;
   background: #BCA787;
   color: #222222;
-  padding: 5px 14px;
+  padding: 6px 10px;
   border-radius: 15px;
   cursor: pointer;
   align-self: flex-end;
+}
+
+.big-news--button {
+  margin-top: 2em;
 }
 
 .news-feed--button {
   padding: 5px 14px;
 }
 
-button:hover,
-button:focus {
-  background: #222222;
-  color: #BCA787;
-  transition: all 500 cubic-bezier(0.19, 1, 0.22, 1);
-  transform: scale(1.2);
-}
 
 @media (min-width: 768px) {
   button,
   .news-feed--button {
     font-size: 1em;
+    box-shadow: 2px 3px #444444;
+  }
+  
+  button:hover,
+  button:focus {
+    background: #222222;
+    color: #BCA787;
+    transition: all 500 cubic-bezier(0.19, 1, 0.22, 1);
+    transform: scale(1.3);
   }
 }
+
+@media (min-width: 1200px) {
+  button,
+  .news-feed--button {
+    box-shadow: 3px 5px #222222, 5px 7px #444444;
+  }
+}
+
 
 
 /* NAVBAR */
@@ -83,7 +107,7 @@ button:focus {
 
 .nav-hamburger{
   color: #222222;
-  font-size: 3em;
+  font-size: 2em;
 }
 
 .sub-header { 
@@ -187,6 +211,7 @@ button:focus {
 .news-feed--card {
   background: #F4F1DE;
   border: 1px solid #E07A5F;
+  box-shadow: 6px 10px #826E5B;
   border-radius: 15px;
   max-width: 18em;
   padding: 1.5em;
@@ -199,7 +224,7 @@ button:focus {
 
 .news-feed--img {
   min-width: 100%;
-  max-height: 12em;
+  max-height: 11em;
   border-radius: 15px;
 }
 
@@ -245,7 +270,7 @@ button:focus {
   }
   
   .big-news--img {
-    width: 40%;
+    width: 50%;
     border-radius: 5px;
     object-fit: cover;
   }
@@ -256,9 +281,16 @@ button:focus {
     font-size: 3em;
   }
   
-  p, 
-  h2 {
+  p {
     font-size: 4rem;
+  }
+
+  h2 {
+    font-size: 6rem;
+  }
+
+  .big-news--card > .date-item {
+    font-size: 1.3em;
   }
 
   .big-news {
@@ -273,6 +305,10 @@ button:focus {
 
   .big-news--img {
     max-width: 90%;
+  }
+
+  .news-feed {
+    grid-gap: 3em;
   }
 }
 
