--- a/code/style.css
+++ b/code/style.css
@@ -1,59 +1,156 @@
 /* Style for Project 2, Technigo Bootcamp: News site */
 
-
-html {
-  /*scroll-behavior: smooth;*/
-  background: rgb(255, 225, 174);
-  color: rgb(242, 65, 57);
-  min-width: 320px;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-  margin: 0;
-  padding: 0;
+  font-family: sans-serif;
+  font-size: 16px;
 }
 
-.navbar {
-  background-color: teal;
+/* Logo & Navbar */
+nav {
+  background: #222;
+  padding: 0 15px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+.menu {   
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+.logo {
+  font-size: 20px;
+  padding: 7.5px 10px 7.5px 0;
+}
+
+.item {
   padding: 10px;
   width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  flex-direction: row;
+  text-align: center;
 }
 
- .logo {
-  width: max-content;
- }
 
-.navbar-item-1, .navbar-item-2, .navbar-item-3, .navbar-item-4 {
-  margin: 10px;
-  border: 2px solid rgb(255, 225, 174);
-  border-radius: 5px;
-  padding: 5px;
-  width: 100px;
-  height: 100px;
+.menu li a {
+  display: block;
+  padding: 15px 5px;
+}
+
+
+/* The big news content */
+.columns {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+}
+
+img {
+
+}
+
+.column {
+  display: flex;
+  flex-direction: column; /* Makes the articles stacked vertically */
 }
 
 .image {
-  width: 10%;
+}
+
+.article {
+  padding: 15px;
+}
+
+/* Tablet */
+@media all and (min-width: 668px) {
   
+  /* Logo & Navbar */
+  .menu {
+      justify-content: center;
+  }
+
+  .logo {
+    flex: 1;
+  }
+
+  /* The big news content */
+  .columns {
+    display: flex;
+    flex-direction: row;
+    padding: 30px;
+  }
+  
+  .column {
+    display: flex;
+  }
+  
+  .image {
+    flex: 2;
+  }
+
+  .main-img {
+    max-width: 100%;
+  }
+  
+  .article {
+    flex: 1; 
+    margin-left: 10px;
+  }
 }
 
-button {
-  height: 40px;
-  display: block;
-  padding: 10px 20px;
-  border: none;
-  background: #1301FF;
-  color: white;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 20px;
+/* Desktop */
+@media all and (min-width: 1024px) {
+  .menu {
+      align-items: center;     
+      flex-wrap: nowrap;
+      background: none;
+  }
+
+  .logo {
+    order: 0;
+  }
+
+  .item {
+    order: 1;
+    position: relative;
+    display: block; 
+    width: auto;
+  }
+
+  /* The big news content */
+  .columns {
+    display: flex;
+    flex-direction: row;
+    padding: 30px;
+  }
+  
+  .column {
+    display: flex;
+    /* justify-content: center; */
+    ;
+  }
+  
+  .image {
+    flex: 2;
+    align-items: center;
+    
+  }
+
+  .main-img {
+    max-width: 75%;
+  }
+  
+  .article {
+    flex: 1; 
+    margin-left: 10px;
+  }
 }
-
-
