--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ body {
 
 .header,
 .aside { 
-  width: 1000px;
+  width: 600px;
 }
 
 h1 {
@@ -26,19 +26,20 @@ article div {
 article {
   border: 1px solid black;
   display: flex;
-  position: relative;
+  margin-bottom: 30px;
 }
 
 .article__image {
-  width: 100%;
+  width: 200px;
 }
 
-.article__text {
-  z-index: 100;
-  position: absolute;
-  background-color: rgba(255,255,255,.7);
-  width: 30%;
-  height: 100%; 
+.section__image {
+    width: 100%;
+    height: auto;
+  }
+
+.section__paragraph {
+  margin-bottom: 60px;
 }
 
 .header__list,
@@ -46,14 +47,26 @@ article {
   list-style-type: none;
 }
 
-.header__list {
-  text-align: left;
-  padding-left: 10px;
+h1,
+nav {
+  display: inline-block;
+}
+
+nav {
+  position: absolute;
+  top: 50px;
+  right: 0px;
+}
+
+.header__list li{
+ display: inline-block;
+ margin-right: 5px;
 }
 
 .footer__list {
   text-align: center;
   font-weight: bolder;
+  display: inline-block;
 }
 
 .footer__list li{
@@ -65,6 +78,10 @@ article {
     flex-direction: row;
     flex-wrap: wrap;
   }
+  .header__list {
+    text-align: left;
+    padding-left: 10px;
+  } 
   .aside {
     display: none;
   }
@@ -73,6 +90,20 @@ article {
 @media (min-width: 1025px) {
   .wrapper {
     display: flex;
+  }
+
+  nav {
+    display: block;
+    position: relative;
+    top: 0px;
+  }
+
+  .header__list {
+    padding-inline-start: 15px;
+  }
+
+  .header__list li{
+    display: block;
   }
 
   .section__image {
@@ -128,5 +159,8 @@ article {
   .section__image {
     width: 100%;
     height: auto;
+  }
+  .footer__list {
+    display: block;
   }
 }
