--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,6 @@
 html {
-  background: #1b4332ff;
-  color: #fff;
+  background: #fff1e6ff;
+  color: black;
   
 }
 
@@ -11,13 +11,16 @@ html {
 
 a {
   text-decoration: none;
-  color: white;
+  color: black;
   font-size: 150%;
   padding: 0 5%;
 }
 
 input {
   width: 90%;
+  text-align: center;
+  border: none;
+  margin: 5%;
 }
 
 
