--- a/code/style.css
+++ b/code/style.css
@@ -34,6 +34,11 @@ h2 {
   margin-bottom: 0.2em;
 }
 
+h3 {
+  font-size: 1.5rem;
+  letter-spacing: 0.05em;
+}
+
 p {
   line-height: 1.7em;
 }
@@ -48,8 +53,8 @@ button {
   font-family: 'Be Vietnam Pro', sans-serif;
   background: #BCA787;
   color: #222222;
-  padding: 6px 10px;
-  border-radius: 15px;
+  padding: 12px 25px;
+  border-radius: 35px;
   cursor: pointer;
   align-self: flex-end;
 }
@@ -64,8 +69,7 @@ button {
 
 
 @media (min-width: 768px) {
-  button,
-  .news-feed--button {
+  button {
     font-size: 1em;
     box-shadow: 2px 3px #444444;
   }
@@ -80,8 +84,7 @@ button {
 }
 
 @media (min-width: 1200px) {
-  button,
-  .news-feed--button {
+  button {
     box-shadow: 3px 5px #222222, 5px 7px #444444;
   }
 }
@@ -220,6 +223,13 @@ button {
   flex-direction: column;
   justify-content: space-between;
   align-content: center;
+  cursor: pointer;
+}
+
+.news-feed--card:hover {
+  transition: all 500 cubic-bezier(0.19, 1, 0.22, 1);
+  transform: scale(1.05);
+  color: rgba(51, 51, 51, 0.5)
 }
 
 .news-feed--img {
@@ -287,6 +297,10 @@ button {
 
   h2 {
     font-size: 5rem;
+  }
+
+  h3 {
+    font-size: 4.5rem;
   }
 
   .big-news--card > .date-item {
