--- a/code/style.css
+++ b/code/style.css
@@ -1,33 +1,25 @@
 html {
   color: #000000;
 }
+
 header img{
   width: 50px;
   height: 50px;
  }
- .logo{
-  display: grid;
-  grid-template-columns: 10% 80%;
-  grid-template-rows: 1fr;
-  grid-column-gap: 35px;
+
+ header{
+  display: flex;
+  margin-left: 10px;
+  font-size: 25px;
  }
+ .item2 {
+  margin-left: 20px;
+  margin-top: 10px;
+}
 
- header h1{
-  margin-top: 5px;
+ header a{
+  display: none;  
  }
-
-.menu{
-  display: none;
-}
-
-ul {
-  list-style: none;
-  display: inline-flex;
-}
-ul li
-{
-  margin-left: 5px;
-}
 
 a {
   text-decoration: none;  
@@ -40,14 +32,40 @@ section{
   text-align: center;
 }
 
+.big-news{
+  text-align: left;
+  margin: 2px 5px 2px 5px;
+}
+
+.big-news img{
+  width: 100%;
+  height: 100%;
+}
+
+
 /*for tab*/
 @media screen and (min-width: 768px) {
-  .menu {
-    display: inline;
+  
+  .item1 { grid-area: logo; }
+  .item2 { grid-area: txtTitle;
+           display:none;}
+  .item3 { grid-area: link1; }
+  .item4 { grid-area: link2; }
+  .item5 { grid-area: link3; }
+  .item6 { grid-area: link4; }
+
+  header {
+    display: grid;
+    grid-template-areas:
+      'link1 link2 logo link3 link4';
+    grid-gap: 10px;
   }
-  header h1{
-    display: none;
+  
+   header a{
+    display: flex;
+    
    }
+
 /*section*/
 section{
   text-align: center;
@@ -61,22 +79,40 @@ section{
   grid-row-gap: 0px;
 }
 
+.big-news{
+  display: grid;
+  grid-template-columns: 30% 70%;
+  grid-column-gap: 10px;
+}
+
 }
 
 /*for desktop*/
 @media screen and (min-width: 1024px) {
-  .menu {
-    display: inline;
+
+  .item2 { 
+    display:flex;
+    margin-left: -90px;
   }
-  header h1{
-    display: inline;
-   }
+  header {
+    display: grid;
+    grid-template-areas:
+      'logo txtTitle link1 link2 link3 link4';
+    grid-gap: 10px;
+  }
+ 
 .mainText{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr;
   grid-column-gap: 5px;
   grid-row-gap: 0px;
+}
+
+.big-news{
+  display: grid;
+  grid-template-columns: 30% 70%;
+  grid-column-gap: 10px;
 }
 
 }
