--- a/code/style.css
+++ b/code/style.css
@@ -47,6 +47,7 @@ p {
   color: #BCA787;
 }
 
+
 /* BUTTONS */
 
 button {
@@ -88,7 +89,6 @@ button {
     box-shadow: 3px 5px #222222, 5px 7px #444444;
   }
 }
-
 
 
 /* NAVBAR */
@@ -238,6 +238,21 @@ button {
   border-radius: 15px;
 }
 
+
+/* FOOTER */
+footer {
+  background: #826E5B;
+  margin-top: 1.5em;
+  padding: 1em;
+  font-size: 1.5em;
+  display: flex;
+  justify-content: center;
+}
+
+.fab {
+  padding-inline: 0.5em;
+  color: #222222;
+}
 
 /* MEDIA QUERIES */
 
