--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,65 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background-color: whitesmoke;
+  font-family: 'Trebuchet MS';
+}
+
+body {
+  margin: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  flex-direction: column;
+}
+
+img {
+  width: 90%;
+  height: 90%;
+  justify-content: center;
+  margin: 1.5rem;
+}
+
+/* scale to desktop size */
+/* only elements that should behave differently */
+
+@media (min-width: 1025px){
+  body {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  img {
+    width: 40%;
+    height: 40%;
+  }
+}
+
+/* scale to tablet size */
+/* only elements that should behave differently */
+@media (min-width: 667px) and (max-width: 1024px){
+  body {
+    flex-direction: row;
+  }
+  img {
+    width: 40%;
+    height: 40%;
+  }
+}
+
+h1 {
+  color: darkslategrey;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+  margin: 0;
+  padding: 0.5rem;
+  background-color: #FF6347;
+}
+
+li {
+  display: list-item;
+  text-align: center;
+  gap: 2em;
 }
