--- a/code/style.css
+++ b/code/style.css
@@ -1,5 +1,6 @@
 html {
   color: #000000;
+  margin: 10px;
 }
 
 header img{
@@ -11,7 +12,9 @@ header img{
   display: flex;
   margin-left: 10px;
   font-size: 25px;
- }
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: #1267b6;
+}
  .item2 {
   margin-left: 20px;
   margin-top: 10px;
@@ -24,9 +27,7 @@ header img{
 a {
   text-decoration: none;  
 }
-.menupartTwo{
-  margin-left: -30px; 
-}
+
 /*section*/
 section{
   text-align: center;
@@ -34,7 +35,7 @@ section{
 
 .big-news{
   text-align: left;
-  margin: 2px 5px 2px 5px;
+  margin: 15px 5px 2px 5px;
 }
 
 .big-news img{
@@ -42,6 +43,13 @@ section{
   height: 100%;
 }
 
+.mainText img{
+  width: 100%;
+  height: 100%;
+}
+section p{
+  text-align: justify;
+}
 
 /*for tab*/
 @media screen and (min-width: 768px) {
@@ -60,30 +68,32 @@ section{
       'link1 link2 logo link3 link4';
     grid-gap: 10px;
   }
-  
+
    header a{
-    display: flex;
-    
+    display: flex;  
    }
 
 /*section*/
-section{
-  text-align: center;
-}
-.mainText{
-  border: 1px solid #000;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr;
-  grid-column-gap: 5px;
-  grid-row-gap: 0px;
-}
-
 .big-news{
   display: grid;
   grid-template-columns: 30% 70%;
-  grid-column-gap: 10px;
+  grid-column-gap: 20px;
+
+  margin-bottom: 20px;
 }
+.big-news-text{
+  margin-top: -20px;
+  margin-right: 20px;
+}
+
+.mainText{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 10px;
+}
+
 
 }
 
@@ -105,14 +115,15 @@ section{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr;
-  grid-column-gap: 5px;
-  grid-row-gap: 0px;
+  grid-column-gap: 20px;
+  grid-row-gap: 10px;
 }
 
 .big-news{
   display: grid;
   grid-template-columns: 30% 70%;
   grid-column-gap: 10px;
+  margin-bottom: 20px;
 }
 
 }
