--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,174 @@
-html {
-  background: #0025ff;
-  color: #fff;
+*{
+  padding:0;
+  margin: 0;
+  box-sizing: border-box;
 }
+
+body{
+  background-image:url(https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fimageserve%2F6058b1eed388d3a4a0831d09%2F960x0.jpg%3Ffit%3Dscale);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  font-family: fantasy;
+  
+}
+body img{
+  align-items: center;
+}
+header{ 
+  position: fixed;
+  overflow: hidden;
+  top: 0;
+  width: 100%;
+
+}
+
+.navbar {
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+
+}
+.navbar-links ul{
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+
+.toggle-button{
+  position: absolute;
+  top: 12px;
+  right: 15px;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 20px;
+ 
+}
+.toggle-button .bar{
+  height: 3px;
+  width: 100%;
+  background-color: whitesmoke;
+  border-radius: 10px;
+  
+}
+.navtext{
+  font-size: 20px;
+  gap: 3rem;
+}
+a, a:visited{
+  color: whitesmoke;
+}
+
+.bi bi-tsunami{
+  color: whitesmoke;
+  
+}
+
+.logoimg{
+  color:whitesmoke ;
+  margin-left: 30px;
+}
+
+label.logo{
+  color: antiquewhite;
+  font-size:40px;
+  line-height: 80px;
+  padding:  50px;
+  
+}
+nav{
+  width: 100%;
+  background: linear-gradient(270deg, #a3bcee, #3e2aae, #260675) fixed;
+  height: 60px;
+
+}
+
+nav ul{
+  float: right;
+  margin-right: 20px;
+
+}
+
+nav ul li{
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+  box-sizing: border-box;
+}
+
+nav ul li a{
+  text-decoration: none;
+padding: 1rem;
+display: block;
+}
+nav li:hover{
+  background-color: #56647f;
+}
+li{
+  display: inline;
+  font-size: 30px;
+  color: whitesmoke;
+
+}
+
+.big-news{
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  
+}
+.img-box{
+  margin: 30px;
+  box-shadow: #a3bcee;
+  border:1px solid;
+  box-shadow: 2px 2px;
+}
+.big-news-text{
+  padding: 5rem;
+  font-size: 20px;
+  text-align: center;
+  line-height: 20px; 
+  width: 400px;
+  color: whitesmoke;
+}
+.grid-contanier{
+  grid-gap: 25px;
+  padding:20px;
+  width: 300px;
+  display: grid;
+  grid-template-columns:1fr 1fr 1fr 1fr;
+
+  
+}
+
+.grid-pic1, .grid-pic2, .grid-pic3, .grid-pic4{
+  height: 300px;
+  background: linear-gradient(270deg, #a3bcee, #3e2aae, #260675) fixed;
+  padding:3px;
+  
+  
+}
+
+.grid-contanier > img{
+  box-shadow: #a3bcee;
+  border:1px solid;
+  padding: 10px;
+  box-shadow: 2px 4px;
+  width: 100%;
+  height: 300%;
+  object-fit: cover;
+}
+
+
+
+
+
+
+
