add hover in footer

--- a/code/style.css
+++ b/code/style.css
@@ -254,6 +254,10 @@ footer {
   color: #222222;
 }
 
+.fab:hover {
+  transform: scale(1.1);
+}
+
 /* MEDIA QUERIES */
 
 @media (min-width: 768px) {
