added some pictures

--- a/code/style.css
+++ b/code/style.css
@@ -23,8 +23,18 @@ input {
   margin: 5%;
 }
 
+section {
+  background-color: white;
+}
 
+.big-news img {
+  width: 90%;
+  padding: 5% 0 0 0;
+}
 
+.smaller-news img {
+  width: 90%;
+}
 
 @media (min-width: 668px) and (max-width: 1024px) {
 
