--- a/code/style.css
+++ b/code/style.css
@@ -1,8 +1,38 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  padding: 1rem;
+}
+
+.wrapper {
+  margin: 0 auto;
+  background-color: antiquewhite;
+  height: 900px;
+}
+
+header {
+  height: 5rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border-bottom: darkslategrey 1px solid;
+}
+
+nav {
+  display: none;
+}
+
+/* Det här behöver ändras sen */
 .logo {
-  width: 20%;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  margin-right: 1rem;;
+  background-color: blue;
+  color: white;
+  display: grid;
+  place-items: center;
 }
