--- a/code/style.css
+++ b/code/style.css
@@ -1,7 +1,7 @@
-/*html {
-  background: black;
+html {
+  background: white;
   color: black;
-}*/
+}
 
 .site-name {
   color: #D96098;
@@ -60,23 +60,65 @@ li {
   font-size: 17px;
 }
 
+li a {
+  color: #A68DAD;
+}
+
 li a:hover {
   color: #A68DAD;
   text-decoration: underline;
 }
 
+.bi-bi-instagram {
+  color:plum;
+}
+
+.bi-bi-facebook {
+  color:slateblue;
+}
+
+.bi-bi-twitter {
+  color:rosybrown;
+}
+
 .big-news {
+  background: palevioletred;
+  border: 2px solid;
+  height: 300px;
   display: flex;
-  justify-content: left;
-  margin: 50px;
+  justify-content:space-around;
+  margin: 10px;
+  padding: 25px;
+  font-family: 'Raleway', sans-serif;
 }
 
 .big-news img {
-  width: 50%;
-  height: 50%;
+  width: 100%;
+  height: 100%;
 }
 
-.big-news-title {
-  font-family: 'Raleway', sans-serif;
-  color:deeppink;
+h2 {
+  color: #886F6F;
+  font-size: 50px;
+}
+
+p {
+  color: #886F6F;
+  font-size: 16px;
+}
+
+.flex-container {
+  display: flex;
+  background-color:thistle;
+  flex-wrap: wrap;
+  margin: 10px;
+}
+
+.flex-container > div {
+  width: 500px;
+  height: 500px;
+  background-color: papayawhip;
+  margin: 15px;
+  padding: 25px;
+  font-size: 75px;
 }
