--- a/code/style.css
+++ b/code/style.css
@@ -1,7 +1,7 @@
 html {
   background: #fff1e6ff;
   color: black;
-  
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 .logo img {
@@ -9,11 +9,26 @@ html {
   border-radius: 50%;
 }
 
+p {
+  display: inline;
+  margin: 0;
+}
+
+.logo {
+  display: flex;
+  flex-direction: column;
+}
+
 a {
   text-decoration: none;
   color: black;
   font-size: 150%;
   padding: 0 5%;
+}
+
+.menu {
+  display:flex;
+  justify-content:flex-end;
 }
 
 input {
@@ -26,14 +41,35 @@ input {
 section {
   background-color: white;
 }
+ 
+.big-news {
+  display: flex;
+  justify-content: center;
+}
 
 .big-news img {
-  width: 90%;
-  padding: 5% 0 0 0;
+  width: 100%;
+  padding-top: 5%;
+}
+
+p1 {
+  font-size: medium;
+}
+
+.smaller-news {
+border-top-style: solid;
+border-width: 1px;
+margin-top: 5%;
+padding-top: 5%;
 }
 
 .smaller-news img {
   width: 90%;
+}
+
+h5 {
+  border-bottom-style: solid;
+  border-width: 1px;
 }
 
 @media (min-width: 668px) and (max-width: 1024px) {
