--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,393 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
-  background: #0025ff;
+  font-family: 'Oswald', Helvetica;
+  font-size: 62.5%;
+}
+
+h1, h2, p, a {
+  color: #f2f2f2;
+  margin-bottom: 1rem;
+  letter-spacing: 0.15rem;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 2.5rem;
+}
+
+p {
+  font-size: 1.75rem;
+}
+
+/* =============== NAV =============== */
+
+nav {
+  background: #1a1a1a;
+  height: 9rem;
+  width: 100%;
+}
+
+.logo {
+  color: white;
+  padding-top: 2rem;
+  padding-left: 1rem;
+}
+
+nav ul {
+  float: right;
+  margin-right: 2rem;
+}
+
+nav ul li {
+  display: inline-block;
+  line-height: 8rem;
+  margin: 0 5px;
+}
+
+nav ul li a {
+  color: #f2f2f2;
+  font-size: 1.7rem;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+
+a:hover {
+  background: #ef0017;
+  transition: .5s;
+  border-radius: 20px;
+}
+
+.checkbtn {
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+
+#check {
+  display: none;
+}
+
+/* =============== BIG NEWS =============== */
+
+.big_news_container {
+  background: linear-gradient(90deg, rgba(26,26,26,1) 50%, rgba(239,0,23,0.9) 100%);
+  display: grid;
+  gap: 2rem;
+  padding: 2rem 2rem;
+  width: 100%;
+  height: auto;
+}
+
+.news_image {
+  display: grid;
+  width: 100%;
+  border-radius: 25px;
+  -webkit-animation: scale-up-center 0.7s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  animation: scale-up-center 0.7s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+ /* =============== SMALLER NEWS =============== */
+
+.smaller_news {
+  width: 90%;
+  margin: 2.5rem auto;
+}
+
+.gallery {
+  display: grid;
+  grid-column: 1;
+  grid-template-rows: repeat(7, 1fr);
+  grid-gap: 1.5rem;
+  width: 100%;
+}
+
+.gallery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border-radius: 5px;
+}
+
+.card {
+  display: grid;
+  background-color: #1a1a1a;
+  border-radius: 10px;
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.9);
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.card-body {
+  display: grid;
+  padding: 2rem;
+}
+
+.gallery_picture_1 {
+  grid-row: 1 / 1;
+}
+
+.gallery_picture_2 {
+  grid-row: 2 / 3;
+}
+
+.gallery_picture_3 {
+  grid-row: 3 / 5;
+}
+
+.gallery_picture_4 {
+  grid-row: 5 / 6;
+}
+
+.gallery_picture_5 {
+  grid-row: 6 / 7;
+}
+
+.gallery_picture_6 {
+  grid-row: 7 / 8;
+}
+  
+/* =============== SPO MUSIC =============== */
+
+.music {
+  display: flex;
+  justify-content: center;
+  margin: 5rem 0;
+}
+
+/* =============== FOOTER =============== */
+
+footer {
+  padding: 3rem;
+  background-color: #000;
   color: #fff;
+  text-align: center;
+}
+
+footer p {
+  font-size: 1.5rem;
+}
+
+/* =============== NAV BAR MEDIA QUERIES =============== */
+
+@media (max-width: 952px) {
+  nav ul li a
+  {
+    font-size: 1.6rem;
+  }
+}
+
+@media (max-width: 766px) {
+  .checkbtn
+  {
+    display: block;
+  }
+
+  ul
+  {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #1a1a1a;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
+  }
+
+  nav ul li
+  {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+
+  nav ul li a
+  {
+    font-size: 2rem;
+  }
+
+  a:hover,a.active
+  {
+    background: none;
+    color: #ef0017;
+  }
+
+  #check:checked ~ ul
+  {
+    left: 0;
+    z-index: 5;
+  }
+}
+
+/* =============== MEDIUM SCREENS =============== */
+
+@media (min-width: 767px) {
+  .big_news_container
+  {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    padding: 3rem 3rem;
+    align-items: center;
+    height: 40vh;
+  }
+  
+  .big_news_part_1 
+  {
+    grid-column: 1 / 3;
+    grid-row: 2 / 4;
+  }
+  
+  .big_news_part_2 
+  {
+    grid-row: 2 / 4;
+    grid-column: 3 / 5;
+  }
+
+  .smaller_news
+  {
+    margin: 3.5rem auto;
+  }
+
+  .gallery
+  {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+
+  .gallery_picture_1
+  {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+  }
+
+  .gallery_picture_2
+  {
+    grid-row: 2 / 2;
+    grid-column: 1 / 3;
+  }
+
+  .gallery_picture_3
+  {
+    grid-row: 1 / 3;
+    grid-column: 3 / 5;
+  }
+
+  .gallery_picture_4
+  {
+    grid-row: 3 / 3;
+    grid-column: 1 / 3;
+  }
+
+  .gallery_picture_5
+  {
+    grid-row: 3 / 3;
+    grid-column: 3 / 5;
+  }
+
+  .gallery_picture_6
+  {
+    grid-row: 4 / 4;
+    grid-column: 1 / 5;
+  }
+}
+
+/* =============== BIG SCREENS =============== */
+
+@media (min-width: 1023px) {
+  .smaller_news
+  {
+    margin: 5rem auto;
+  }
+
+  .gallery
+  {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+
+  .gallery_picture_1
+  {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+  }
+
+  .gallery_picture_2
+  {
+    grid-row: 2 / 2;
+    grid-column: 1 / 3;
+  }
+
+  .gallery_picture_3
+  {
+    grid-row: 1 / 3;
+    grid-column: 3 / 5;
+  }
+
+  .gallery_picture_4
+  {
+    grid-row: 3 / 3;
+    grid-column: 1 / 2;
+  }
+
+  .gallery_picture_5
+  {
+    grid-row: 3 / 3;
+    grid-column: 4 / 5;
+  }
+
+  .gallery_picture_6
+  {
+    grid-row: 3 / 3;
+    grid-column: 2 / 4;
+  }
+}
+
+@media (min-width: 1337px) {
+  .big_news_container
+  {
+    height: 70vh;
+  }
+}
+
+  /* ======= ANIMATION ======= */
+
+@-webkit-keyframes scale-up-center {
+  0%
+  {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+
+  100%
+  {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes scale-up-center {
+  0%
+  {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+
+  100%
+  {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
 }
