--- a/code/style.css
+++ b/code/style.css
@@ -8,21 +8,7 @@ body {
   height: 100%;
 }
 
-img {
-  width: 90%;
-  height: 90%;
-  justify-content: center;
-  margin: 1.5rem;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  width: auto;
-  background-color: #FF6347;
-}
-
-/* scale to desktop size */
+/* scale to desktop size
 /* only elements that should behave differently */
 
 @media (min-width: 1025px){
@@ -34,7 +20,13 @@ header {
     width: 40%;
     height: 40%;
   }
+  .container-article {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
+/*end*/
 
 /* scale to tablet size */
 /* only elements that should behave differently */
@@ -46,21 +38,49 @@ header {
     width: 40%;
     height: 40%;
   }
+  .container-article {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+} 
+/*end*/
+
+img {
+  width: 90%;
+  height: 90%;
+  justify-content: center;
+  margin: 1.5rem;
 }
 
-h1 {
-  color: darkslategrey;
+header {
+  width: auto;
+  background-color: #FF6347;
+  height: 1.5rem;
 }
 
 .link {
   list-style-type: none;
   display: flex;
   justify-content: space-around;
+  margin: 0;
+  padding: 0;
 }
 
 .headline {
   border: blue 1px solid;
+  background-color: orange;
 }
 .article {
-  border: red 1px solid;
+  border: blue 1px solid;
+  background-color: red;
+  display: flex;
+}
+
+.article img {
+  width: 25%;
+}
+
+h2 {
+  display: inline;
 }
