--- a/code/style.css
+++ b/code/style.css
@@ -1,15 +1,21 @@
 body{
-  padding: 0px;
   margin:0px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
- }
-  
+  padding:0px;
+  font-family: sans-serif;
+  box-sizing: border-box;
 
 
-header{
+}
+
+.header{
   background-color: rgb(0, 0, 0);
-  color: white;
-  
+  color:rgba(250, 235, 215, 0.842);
+  display:flex;
+  flex-direction: row;
+  width:100%;
+  height:500px;
+  flex-wrap: wrap;
+
 }
 
 .nav-bar{
@@ -18,178 +24,174 @@ header{
   height:100px;
   display: flex;
   flex-wrap: wrap;
-  
+  line-height: 1rem;
 }
 
 .nav-bar img{
   height: 100px;
-  width:90px;
+  width:100px;
   opacity: 60%;
   padding-bottom: 20px;
 }
 
-.media-icons{
-  margin: 0 10px;
-  text-align: right;
-  letter-spacing: 7px;
-  flex-grow: 1;
- padding:20px;
- cursor: pointer;
- font-size: 20px;
- color: rgba(250, 235, 215, 0.705);
-}
-.fa-facebook-f:hover{
-  opacity: 40%;
-}
-.fa-instagram:hover{
-  opacity: 40%;
-}
-.fa-twitter:hover{
-  opacity: 40%;
-}
-.fa-youtube:hover{
-  opacity: 40%;
-
-}
 .nav-bar h1{
-margin: auto 0;
-padding: 0 20px;
-letter-spacing: 1px;
-font-family: "The Nautigal", cursive;
-font-size: 40px;
-justify-content: space-around;
+  height: 100px;
+ margin: 10px;
+  opacity: 70%;
+  align-items: center;
+  color: antiquewhite;
+ font-size: 30px;
 }
 
-.search{
-  margin-top: 4px;
-  margin-left: 60px;
+.media-icons{
+  color:rgba(250, 235, 215, 0.438);
+ margin: 20px;
 }
-form.search button {
-  background: rgba(250, 235, 215, 0.705);
-  color: rgb(61, 6, 6);
-  font-size: 16px;
+
+.navbar-nav li a {
   
-  cursor: pointer;
-  
-}
-form.search button:hover {
-  background: rgba(61, 6, 6, 0.055);
-}
-
-form.search input[type=text] {
-  background: rgba(250, 235, 215, 0.705);
-}
-
-nav{
-  background-color: rgba(214, 194, 194, 0.712);
-  height:50px;
- 
-
- } 
- 
- .navbar-nav li a:hover {
-   color:antiquewhite;
-   opacity: 40%;
-  }
-.navbar-nav li {
-  padding:0px 20px;
-}
- .navbar-nav li a {
-  color:rgba(250, 235, 215, 0.842);
   font-size: 17px;
   cursor: pointer;
   text-decoration: none;
   font-weight: bold;
   font-family: 'The Nautigal', cursive;
-  margin-bottom: 15px;
-  letter-spacing: 1px ;
+  margin: 20px 10px;
+  letter-spacing: 2px ;
+ display: none;
  }
 
- nav ul{
-   margin: 20px 0 0 0;
- }
- 
+
  .highlights{
-   display:flex;
-   height:80px;
- }
- .highlights1{
-   width: 400px;
-  font-weight: bold;
-  font-size: 20px;
-  font-family: 'Lucida Sans';
-  font-family: 'The Nautigal', cursive;
-  text-transform: Uppercase;
-  color: rgba(250, 235, 215, 0.842);
-  padding: 20px;
+  display:none;
+  height:80px;
+}
+
+@media (min-width:1024px){
+  header{
+    background-color: rgb(0, 0, 0);
+    color: white;
+    display:flex;
+    flex-direction: column;
+    width:100%
+  }
+  
+  
+  .nav-bar{
+    background-color: rgb(0, 0, 0);
+    padding: 10px;
+    height:100px;
+    display: flex;
+    flex-wrap: wrap;
+    line-height: 1rem;
+    
+  }
+  
+  .nav-bar img{
+    height: 100px;
+    width:90px;
+    opacity: 60%;
+    padding-bottom: 20px;
+  }
+  
+  .media-icons{
+    margin: 0 10px;
+    text-align: right;
+    letter-spacing: 5px;
+    flex-grow: 1;
+   padding:20px;
+   cursor: pointer;
+   font-size: 20px;
+   color: rgba(250, 235, 215, 0.705);
+  
+  }
+  .fa-facebook-f:hover{
+    opacity: 40%;
+    transform: scale(1.7);
+  }
+  .fa-instagram:hover{
+    opacity: 40%;
+    transform: scale(1.7);
+  }
+  .fa-twitter:hover{
+    opacity: 40%;
+    transform: scale(1.7);
+  }
+  .fa-youtube:hover{
+    opacity: 40%;
+    transform: scale(1.7);
+  
+  }
+  .nav-bar h1{
+    margin: auto 0;
+    padding: 0 20px;
+    letter-spacing: 1px;
+  font-family: "The Nautigal", cursive;
+  font-size: 40px;
+  justify-content: space-around;
+  height: 40px;
+  }
+  
+  
+  
+  .navbar{
+    background-color: rgba(214, 194, 194, 0.712);
+    height:70px;
+    
+    
+  
+   } 
+   
+   .navbar-nav li a:hover {
+     color:antiquewhite;
+     opacity: 40%;
+     transform: scale(1.1);
+    }
+  
+   .navbar-nav li a {
+    color:rgba(250, 235, 215, 0.842);
+    font-size: 20px;
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: 'The Nautigal', cursive;
+    margin: 20px 10px;
+    letter-spacing: 1px ;
+   display: block;
+   }
+  .nav-link{
+  margin:10px;
+  }
+   
+   
+   .highlights{
+     display:flex;
+     height:80px;
+   }
+   .highlights1{
+     width: 400px;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: 'Lucida Sans';
+    font-family: 'The Nautigal', cursive;
+    text-transform: Uppercase;
+    color: rgba(250, 235, 215, 0.842);
+    padding: 20px;
+    
+  }
+   
+  .highlights2{
+    font-weight: light;
+    font-size: 20px;
+    font-family: 'Lucida Sans';
+    font-family: 'The Nautigal', cursive;
+    padding: 20px;
+    
+  }
+  
+  
+  
+  
+  
   
 }
- 
-.highlights2{
-  font-weight: light;
-  font-size: 20px;
-  font-family: 'Lucida Sans';
-  font-family: 'The Nautigal', cursive;
-  padding: 20px;
-  
-}
 
-.main-news{
-  display: flex;
-	flex-wrap: wrap;
-	font-family: 'The Nautigal', cursive;
-  background-color: rgba(214, 194, 194, 0.842);
-
-}
-
-.main-news h2{
-  margin: 0;
-	padding: 5px;
-	color: black;
-
-}
- h2{
-   margin: 0 50px;
-	font-weight: bolder;
-   color: black;
-  font-size: 110px;
-  text-transform: uppercase;
-  letter-spacing: 1px;;
-}
-
-.featured {
-  flex:3;
-}
-
-.latest{
-  flex: 1;
-}
-
-.editor{
-  flex: 1;
-}
-.featured h2{
- padding: 10px 200px;
-}
-
-.latest h2{
-  padding: 5px 80px;
-  margin-left: 10px;
-  width: 50%;
-  white-space: nowrap ;
-}
-
-.featured img{
-  height:500px;
-  width: 800px;
-  margin-left: 20px;
-}
- 
-.featured p {
-  flex:1;
-  font-size: medium;
-font-weight: bolder;
-flex-wrap: wrap;
-margin: 20 20;
-
-}
