--- a/code/style.css
+++ b/code/style.css
@@ -1,8 +1,8 @@
 
 
 body {
-  background: linear-gradient(to bottom, #F6EABE, 
-  #FDA65D);
+  background: linear-gradient(to bottom right, #F6EABE, 
+  #FDA65D, #FFA810);
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   
@@ -13,7 +13,6 @@ body {
 
 header {
   padding: 5px;
-  
   margin: -10px -8px 20px -8px;
   border-radius: 2px;
   display: grid;
@@ -34,11 +33,14 @@ a:visited, a:link {
 }
 
 header img {
-  margin: 20px;
+  margin: 5px;
   grid-column-start: 2;
+  justify-self: center;
+  align-self: center
 }
 
 .meny {
+  justify-self: center;
   align-self: center;
   grid-column-start: 3;
   display: inline;
@@ -104,6 +106,11 @@ p {
       grid-column: span 1;
   }
 
+  .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p {
+    font-size: 14px;
+    line-height: 20px;
+    
+  }
   
 }
 
@@ -111,12 +118,13 @@ p {
 @media (min-width:668px) {
   header {
       grid-template-columns: repeat(5, 1fr);
+      
   }
 
   nav {
       grid-column: 2 / 6;
       justify-content: space-around;
-      align-items: center;
+      align-self: center;
   }
 
   nav a {
@@ -127,7 +135,6 @@ p {
 
   header img {
       grid-column-start: 1;
-      margin-left: 40px; /* Centrerar loggan */
   }
 
   .meny {
@@ -143,6 +150,11 @@ p {
       grid-template-columns: repeat(2, 1fr);
   }
 
+  .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p {
+    line-height: 25px;
+    
+  }
+
   }
   
 
@@ -155,13 +167,12 @@ p {
   .cards {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      flex-wrap: wrap;
+
   }
 
-  nav p:hover {
-      padding: 10px 20px;
+  nav a:hover {
       background-color: #FDA65D;
-      border-radius: 30px;
+      border-radius: 50px;
       box-shadow: 6px 6px 20px rgba(122,122,122,0.212);
     }
 }
@@ -178,6 +189,8 @@ p {
  
  
 }
+
+
 
 .part1 img {
  border-radius: 2px;
@@ -225,18 +238,93 @@ p {
   box-shadow: 6px 6px 20px rgba(122,122,122,0.712);
 }
 
+.card1 p, .card2 p, .card3 p, .card4 p, .card5 p, .card6 p, .card7 p, .card8 p {
+  display:none;
+}
+
+.card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p {
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  
+}
+
+.card1:hover img, .card2:hover img, .card3:hover img, .card4:hover img, .card5:hover img, .card6:hover img, .card7:hover img, .card8:hover img {
+  opacity: 0.2;
+  
+}
+
 
 footer {
   display: flex;
   justify-content: center;
+  margin-top: -50px;
 }
 
 footer img {
   margin: 10px;
 }
 
-footer img:hover {
+footer a:first-child:hover {
   filter: invert(31%) sepia(25%) saturate(1416%) hue-rotate(182deg) brightness(98%) contrast(84%);
+}
+
+footer a:nth-child(2):hover {
+  filter: invert(21%) sepia(90%) saturate(2274%) hue-rotate(299deg) brightness(92%) contrast(88%);
+}
+
+footer a:nth-child(3):hover {
+  filter: invert(51%) sepia(80%) saturate(2627%) hue-rotate(163deg) brightness(98%) contrast(103%);
+}
+
+footer a:nth-child(4):hover {
+  filter: invert(99%) sepia(0%) saturate(1623%) hue-rotate(201deg) brightness(117%) contrast(100%);
+}
+
+
+    button {
+      background: none;
+      color: black;
+      border: none;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    .meny ul {
+      position: absolute;
+      background: linear-gradient(
+      to right bottom,
+      rgba(255, 255, 255, 0.7),
+      rgba(255, 255, 255, 0.3) );
+      border: 1px solid black;
+      width: 120px;
+      height: 120px;
+      display: grid;
+      gap: 10px;
+      padding: 10px;
+      list-style: inside;
+      border-radius: 10px;
+      opacity: 0;
+      pointer-events: none;
+      transition: all 0.5s ease;
+      z-index: 1;
+}
+
+.meny li:hover, .meny li:focus {
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;  
+}
+
+
+.meny button:focus + ul {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 
