--- a/code/style.css
+++ b/code/style.css
@@ -4,8 +4,6 @@ html {
 
 body {
   margin: 0;
-  width: 100%;
-  height: 100%;
 }
 
 /* scale to desktop size
@@ -47,40 +45,40 @@ body {
 /*end*/
 
 img {
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   justify-content: center;
-  margin: 1.5rem;
 }
 
 header {
   width: auto;
   background-color: #FF6347;
-  height: 1.5rem;
+  height: 2rem;
 }
 
-.link {
-  list-style-type: none;
+/* .logo-container img {
+  width: 2rem;
+  height: 2rem;
+  margin: 0;
+  padding: 0;
+} */
+
+.nav-links {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
+  gap: 2rem;
   margin: 0;
   padding: 0;
 }
 
-.headline {
-  border: blue 1px solid;
-  background-color: orange;
+.headline-article {
+  border: orange 1px solid;
+  background-color: lightgray;
+  margin: 1rem;
+
 }
 .article {
-  border: blue 1px solid;
-  background-color: red;
-  display: flex;
-}
-
-.article img {
-  width: 25%;
-}
-
-h2 {
-  display: inline;
+  border: orange 1px solid;
+  background-color: lightgray;
+  margin: 1rem;
 }
